--- a/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/templates/template.xhtml
+++ b/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/templates/template.xhtml
@@ -14,6 +14,11 @@
 	    <ui:insert name="scripts"></ui:insert>
 	</h:head>
 	<h:body>
+		<div class="header">
+			<span class="title">Machine<b>Learning</b> Algorithms</span>
+			<br/>
+			<span class="subtitle">A small system to work with Machine Learning</span>
+		</div>
 		<div class="container">
 			<h:form id="formToolBar">
 				<p:growl autoUpdate="true" globalOnly="true" />
@@ -22,5 +27,10 @@
 			<ui:insert name="content" />
 		</div>
 		<ui:insert name="dialogs" />
+		<div class="footer">
+			<span>Universidade Federal do Ceará, Artificial Inteligence</span>
+			<br/>
+			<span>Advisor: Carlos Brito</span>
+		</div>
 	</h:body>
 </html>
