--- a/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/css/primefaces.css
+++ b/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/css/primefaces.css
@@ -31,3 +31,7 @@
 .ui-widget-overlay{
 	background: #CDCDCD !important;
 }
+
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active{
+	text-shadow: none !important;
+}
