--- a/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/css/geral.css
+++ b/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/css/geral.css
@@ -82,3 +82,12 @@ button{
     color: #777777;
 }
 
+.noBG{
+	background: none repeat scroll 0 0 transparent !important;
+    border: medium none !important;
+    height: 16px !important;
+}
+
+.noBG.ui-state-hover .ui-icon, .noBG.ui-state-focus .ui-icon {
+    background-image: url("/MachineLearning/icons/ui-icons_cd0a0a_256x240.png") !important;
+}
