--- a/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/templates/template.xhtml
+++ b/MachineLearning-Web/MachineLearning-Web/MachineLearging/WebContent/templates/template.xhtml
@@ -27,6 +27,9 @@
 			<ui:insert name="content" />
 		</div>
 		<ui:insert name="dialogs" />
+		<h:form>
+			<ui:insert name="remoteCommands"/>
+		</h:form>
 		<div class="footer">
 			<span>Universidade Federal do Ceará, Artificial Inteligence</span>
 			<br/>
